@@ -220,9 +220,13 @@ public interface ERDesignerBundle {
   /** \u0045\u0078\u0074\u0072\u0061. */
   String EXTRA = "EXTRA";
   /** \u0043\u006f\u006d\u0070\u0061\u0072\u0065\u0020\u0077\u0069\u0074\u0068\u0020\u0064\u0061\u0074\u0061\u0062\u0061\u0073\u0065\u002e\u002e\u002e. */
-  String COMPLETECOMPARE = "COMPLETECOMPARE";
-  /** \u004d\u006f\u0064\u0065\u006c. */
-  String MODEL = "MODEL";
+  String COMPLETECOMPAREWITHDATABASE = "COMPLETECOMPAREWITHDATABASE";
+  /** \u0043\u006f\u006d\u0070\u0061\u0072\u0065\u0020\u0077\u0069\u0074\u0068\u0020\u006f\u0074\u0068\u0065\u0072\u0020\u006d\u006f\u0064\u0065\u006c\u002e\u002e\u002e. */
+  String COMPLETECOMPAREWITHOTHERMODEL = "COMPLETECOMPAREWITHOTHERMODEL";
+  /** \u0043\u0075\u0072\u0072\u0065\u006e\u0074\u0020\u006d\u006f\u0064\u0065\u006c. */
+  String CURRENTMODEL = "CURRENTMODEL";
+  /** \u004f\u0074\u0068\u0065\u0072\u0020\u006d\u006f\u0064\u0065\u006c. */
+  String OTHERMODEL = "OTHERMODEL";
   /** \u0054\u0061\u0062\u006c\u0065\u0020\u007b\u0030\u007d\u0020\u0069\u0073\u0020\u006d\u0069\u0073\u0073\u0069\u006e\u0067. */
   String MISSINGENTITY = "MISSINGENTITY";
   /** \u0041\u0074\u0074\u0072\u0069\u0062\u0075\u0074\u0065\u0020\u007b\u0030\u007d\u0020\u0069\u0073\u0020\u006d\u0069\u0073\u0073\u0069\u006e\u0067. */
