@@ -25,7 +25,8 @@ ADDFOLDER.icon=\u002f\u0064\u0065\u002f\u0065\u0072\u0064\u0065\u0073\u0069\u006
 REMOVEFOLDER.icon=\u002f\u0064\u0065\u002f\u0065\u0072\u0064\u0065\u0073\u0069\u0067\u006e\u0065\u0072\u006e\u0067\u002f\u0069\u0063\u006f\u006e\u0073\u002f\u0066\u006f\u006c\u0064\u0065\u0072\u005f\u0064\u0065\u006c\u0065\u0074\u0065\u002e\u0070\u006e\u0067
 EXECUTESCRIPT.icon=\u002f\u0064\u0065\u002f\u0065\u0072\u0064\u0065\u0073\u0069\u0067\u006e\u0065\u0072\u006e\u0067\u002f\u0069\u0063\u006f\u006e\u0073\u002f\u0064\u0061\u0074\u0061\u0062\u0061\u0073\u0065\u005f\u0073\u0061\u0076\u0065\u002e\u0070\u006e\u0067
 SAVESCRIPTTOFILE.icon=\u002f\u0064\u0065\u002f\u0065\u0072\u0064\u0065\u0073\u0069\u0067\u006e\u0065\u0072\u006e\u0067\u002f\u0069\u0063\u006f\u006e\u0073\u002f\u0073\u0063\u0072\u0069\u0070\u0074\u005f\u0073\u0061\u0076\u0065\u002e\u0070\u006e\u0067
-COMPLETECOMPARE.icon=\u002f\u0064\u0065\u002f\u0065\u0072\u0064\u0065\u0073\u0069\u0067\u006e\u0065\u0072\u006e\u0067\u002f\u0069\u0063\u006f\u006e\u0073\u002f\u0063\u006f\u006d\u0070\u0061\u0072\u0065\u005f\u0076\u0069\u0065\u0077\u002e\u0067\u0069\u0066
+COMPLETECOMPAREWITHDATABASE.icon=\u002f\u0064\u0065\u002f\u0065\u0072\u0064\u0065\u0073\u0069\u0067\u006e\u0065\u0072\u006e\u0067\u002f\u0069\u0063\u006f\u006e\u0073\u002f\u0063\u006f\u006d\u0070\u0061\u0072\u0065\u005f\u0076\u0069\u0065\u0077\u002e\u0067\u0069\u0066
+COMPLETECOMPAREWITHOTHERMODEL.icon=\u002f\u0064\u0065\u002f\u0065\u0072\u0064\u0065\u0073\u0069\u0067\u006e\u0065\u0072\u006e\u0067\u002f\u0069\u0063\u006f\u006e\u0073\u002f\u0063\u006f\u006d\u0070\u0061\u0072\u0065\u005f\u0076\u0069\u0065\u0077\u002e\u0067\u0069\u0066
 COMMENT.icon=\u002f\u0064\u0065\u002f\u0065\u0072\u0064\u0065\u0073\u0069\u0067\u006e\u0065\u0072\u006e\u0067\u002f\u0069\u0063\u006f\u006e\u0073\u002f\u0063\u006f\u006d\u006d\u0065\u006e\u0074\u005f\u0061\u0064\u0064\u002e\u0067\u0069\u0066
 NEWONLYICON.icon=\u002f\u0064\u0065\u002f\u0065\u0072\u0064\u0065\u0073\u0069\u0067\u006e\u0065\u0072\u006e\u0067\u002f\u0069\u0063\u006f\u006e\u0073\u002f\u006e\u0065\u0077\u002e\u0070\u006e\u0067
 DELETEONLYICON.icon=\u002f\u0064\u0065\u002f\u0065\u0072\u0064\u0065\u0073\u0069\u0067\u006e\u0065\u0072\u006e\u0067\u002f\u0069\u0063\u006f\u006e\u0073\u002f\u0064\u0065\u006c\u0065\u0074\u0065\u002e\u0070\u006e\u0067
@@ -128,8 +129,10 @@ GENERATECHANGELOG.text=\u0043\u0075\u0072\u0072\u0065\u006e\u0074\u0020\u0064\u0
 TABLEMUSTHAVEATLEASTONEATTRIBUTE.text=\u0041\u0020\u0074\u0061\u0062\u006c\u0065\u0020\u006d\u0075\u0073\u0074\u0020\u0068\u0061\u0076\u0065\u0020\u0063\u006f\u006e\u0074\u0061\u0069\u006e\u0020\u006c\u0065\u0061\u0073\u0074\u0020\u006f\u006e\u0065\u0020\u0061\u0074\u0074\u0072\u0069\u0062\u0075\u0074\u0065\u0021
 DIALECTISNOTSUPPORTED.text=\u0054\u0068\u0065\u0020\u0064\u0061\u0074\u0061\u0062\u0061\u0073\u0065\u0020\u0064\u0069\u0061\u006c\u0065\u0063\u0074\u0020\u0069\u0073\u0020\u006e\u006f\u0074\u0020\u0073\u0075\u0070\u0070\u006f\u0072\u0074\u0065\u0064\u0021
 EXTRA.text=\u0045\u0078\u0074\u0072\u0061
-COMPLETECOMPARE.text=\u0043\u006f\u006d\u0070\u0061\u0072\u0065\u0020\u0077\u0069\u0074\u0068\u0020\u0064\u0061\u0074\u0061\u0062\u0061\u0073\u0065\u002e\u002e\u002e
-MODEL.text=\u004d\u006f\u0064\u0065\u006c
+COMPLETECOMPAREWITHDATABASE.text=\u0043\u006f\u006d\u0070\u0061\u0072\u0065\u0020\u0077\u0069\u0074\u0068\u0020\u0064\u0061\u0074\u0061\u0062\u0061\u0073\u0065\u002e\u002e\u002e
+COMPLETECOMPAREWITHOTHERMODEL.text=\u0043\u006f\u006d\u0070\u0061\u0072\u0065\u0020\u0077\u0069\u0074\u0068\u0020\u006f\u0074\u0068\u0065\u0072\u0020\u006d\u006f\u0064\u0065\u006c\u002e\u002e\u002e
+CURRENTMODEL.text=\u0043\u0075\u0072\u0072\u0065\u006e\u0074\u0020\u006d\u006f\u0064\u0065\u006c
+OTHERMODEL.text=\u004f\u0074\u0068\u0065\u0072\u0020\u006d\u006f\u0064\u0065\u006c
 MISSINGENTITY.text=\u0054\u0061\u0062\u006c\u0065\u0020\u007b\u0030\u007d\u0020\u0069\u0073\u0020\u006d\u0069\u0073\u0073\u0069\u006e\u0067
 MISSINGATTRIBUTE.text=\u0041\u0074\u0074\u0072\u0069\u0062\u0075\u0074\u0065\u0020\u007b\u0030\u007d\u0020\u0069\u0073\u0020\u006d\u0069\u0073\u0073\u0069\u006e\u0067
 REDEFINED.text=\u0052\u0065\u0064\u0065\u0066\u0069\u006e\u0065\u0064\u0020\u007b\u0030\u007d
